--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -52,6 +52,10 @@
     "add_card": "إضافة بطاقة",
     "no_cards": "لا توجد بطاقات بعد",
     "no_cards_description": "ابدأ بإضافة أول بطاقة عمل",
+    "no_cards_found": "لا توجد بطاقات",
+    "no_cards_message": "لم تقم بإضافة أي بطاقات عمل بعد",
+    "no_search_results": "لا توجد نتائج",
+    "no_search_results_message": "جرب البحث بكلمات مختلفة",
     "scan_card": "مسح البطاقة",
     "create_card": "إنشاء بطاقة",
     "view_card": "عرض البطاقة",
@@ -123,12 +127,67 @@
     "invalid_phone_number": "رقم الهاتف غير صحيح",
     "invalid_website": "رابط الموقع غير صحيح",
     
+    "email_required": "البريد الإلكتروني مطلوب",
+    "email_invalid": "تنسيق البريد الإلكتروني غير صحيح",
+    "password_required": "كلمة المرور مطلوبة",
+    "name_required": "الاسم مطلوب",
+    "company_required": "اسم الشركة مطلوب",
+    "job_title_required": "المسمى الوظيفي مطلوب",
+    "phone_required": "رقم الهاتف مطلوب",
+    "phone_invalid": "تنسيق رقم الهاتف غير صحيح",
+    "email_already_exists": "البريد الإلكتروني موجود بالفعل",
+    "invalid_email_or_password": "البريد الإلكتروني أو كلمة المرور غير صحيحة",
+    "user_does_not_exist": "المستخدم غير موجود",
+    "email_already_registered": "البريد الإلكتروني مسجل بالفعل",
+    
+    "loading_message": "جاري التحميل...",
+    "saving_message": "جاري الحفظ...",
+    "updating_message": "جاري التحديث...",
+    "deleting_message": "جاري الحذف...",
+    "scanning_message": "جاري المسح...",
+    "signing_out_message": "جاري تسجيل الخروج...",
+    "starting_message": "جاري البدء...",
+    "skipping_message": "جاري التخطي...",
+    
+    "card_saved_successfully": "تم حفظ البطاقة بنجاح",
+    "card_updated_successfully": "تم تحديث البطاقة بنجاح",
+    "card_deleted_successfully": "تم حذف البطاقة بنجاح",
+    "account_created_successfully": "تم إنشاء الحساب بنجاح",
+    "copied_to_clipboard": "تم النسخ إلى الحافظة",
+    
+    "something_went_wrong": "حدث خطأ ما",
+    "camera_permission_denied": "تم رفض إذن الكاميرا",
+    "gallery_permission_denied": "تم رفض إذن المعرض",
+    
+    "confirm_delete": "تأكيد الحذف",
+    "confirm_delete_message": "هل أنت متأكد من حذف هذا العنصر؟",
+    "confirm_sign_out": "تأكيد تسجيل الخروج",
+    "confirm_sign_out_message": "هل أنت متأكد من تسجيل الخروج؟",
+    
+    "name": "الاسم",
+    "company": "الشركة",
+    "copy": "نسخ",
+    "close": "إغلاق",
+    "retry": "إعادة المحاولة",
+    "refresh": "تحديث",
+    "add_notes": "إضافة ملاحظات",
+    "search_cards": "البحث في البطاقات",
+    "welcome": "مرحباً",
+    "profile": "الملف الشخصي",
+    
     "intro_1_title": "لا تقلق من كثرة البطاقات",
     "intro_1_description": "مع Business Code، يمكنك إضافة ومشاركة أنواع مختلفة من البطاقات، مثل بطاقات الأعمال وبطاقات الهوية وبطاقات المرور.",
     "intro_2_title": "احفظها في محفظة iOS أو تطبيقنا",
     "intro_2_description": "يمكنك حفظ نسخة من بطاقاتك في محفظة iOS أو في تطبيق Business Card بنقرة واحدة فقط.",
     "intro_3_title": "شاركها مع الآخرين بسهولة",
     "intro_3_description": "مع Business Code، شارك بطاقاتك مع الآخرين بسهولة عبر رابط أو بمسح رمز QR.",
+    
+    "scan_cards": "مسح البطاقات",
+    "scan_cards_description": "امسح بطاقات الأعمال بكاميرتك واستخرج معلومات الاتصال تلقائياً",
+    "organize_contacts": "تنظيم جهات الاتصال",
+    "organize_contacts_description": "احتفظ بجميع جهات اتصال الأعمال منظمة ومتاحة بسهولة في مكان واحد",
+    "easy_access": "وصول سهل",
+    "easy_access_description": "الوصول السريع ومشاركة بطاقات أعمالك مع الآخرين في أي وقت وفي أي مكان",
     
     "start": "ابدأ"
 }
