--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -52,6 +52,10 @@
     "add_card": "Add Card",
     "no_cards": "No Cards Yet",
     "no_cards_description": "Start by adding your first business card",
+    "no_cards_found": "No Cards Found",
+    "no_cards_message": "You haven't added any business cards yet",
+    "no_search_results": "No Results Found",
+    "no_search_results_message": "Try searching with different keywords",
     "scan_card": "Scan Card",
     "create_card": "Create Card",
     "view_card": "View Card",
@@ -123,12 +127,67 @@
     "invalid_phone_number": "Invalid phone number",
     "invalid_website": "Invalid website URL",
     
+    "email_required": "Email is required",
+    "email_invalid": "Invalid email format",
+    "password_required": "Password is required",
+    "name_required": "Name is required",
+    "company_required": "Company name is required",
+    "job_title_required": "Job title is required",
+    "phone_required": "Phone number is required",
+    "phone_invalid": "Invalid phone number format",
+    "email_already_exists": "Email already exists",
+    "invalid_email_or_password": "Invalid email or password",
+    "user_does_not_exist": "User does not exist",
+    "email_already_registered": "Email already registered",
+    
+    "loading_message": "Loading...",
+    "saving_message": "Saving...",
+    "updating_message": "Updating...",
+    "deleting_message": "Deleting...",
+    "scanning_message": "Scanning...",
+    "signing_out_message": "Signing out...",
+    "starting_message": "Starting...",
+    "skipping_message": "Skipping...",
+    
+    "card_saved_successfully": "Card saved successfully",
+    "card_updated_successfully": "Card updated successfully",
+    "card_deleted_successfully": "Card deleted successfully",
+    "account_created_successfully": "Account created successfully",
+    "copied_to_clipboard": "Copied to clipboard",
+    
+    "something_went_wrong": "Something went wrong",
+    "camera_permission_denied": "Camera permission denied",
+    "gallery_permission_denied": "Gallery permission denied",
+    
+    "confirm_delete": "Confirm Delete",
+    "confirm_delete_message": "Are you sure you want to delete this item?",
+    "confirm_sign_out": "Confirm Sign Out",
+    "confirm_sign_out_message": "Are you sure you want to sign out?",
+    
+    "name": "Name",
+    "company": "Company",
+    "copy": "Copy",
+    "close": "Close",
+    "retry": "Retry",
+    "refresh": "Refresh",
+    "add_notes": "Add Notes",
+    "search_cards": "Search Cards",
+    "welcome": "Welcome",
+    "profile": "Profile",
+    
     "intro_1_title": "Don't worry about too many cards.",
     "intro_1_description": "With BusinessCode, you can add and share various types of cards, such as business cards, ID cards, and pass card.",
     "intro_2_title": "Save it on your iOS wallet or our app",
     "intro_2_description": "You can save a copy of your cards on the iOS wallet or on the Business Card app with just a click.",
     "intro_3_title": "Share it with others easily",
     "intro_3_description": "With Business Code, easily share your cards with others via a link or by scanning the QR code.",
+    
+    "scan_cards": "Scan Cards",
+    "scan_cards_description": "Scan business cards with your camera and automatically extract contact information",
+    "organize_contacts": "Organize Contacts",
+    "organize_contacts_description": "Keep all your business contacts organized and easily accessible in one place",
+    "easy_access": "Easy Access",
+    "easy_access_description": "Quickly access and share your business cards with others anytime, anywhere",
     
     "start": "Start"
 }
