work on text filed

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,10 +1,11 @@
 {
+
+
+    "card_image_captured_success": "تم التقاط الصورة بنجاح",
+    "failed_to_capture_card_image": "فشل في التقاط الصورة",
     "app_name": "مدير بطاقات الأعمال",
     "ok": "حسناً",
-    "cancel": "إلغاء",
     "save": "حفظ",
-    "delete": "حذف",
-    "edit": "تعديل",
     "add": "إضافة",
     "search": "بحث",
     "loading": "جاري التحميل...",
@@ -21,7 +22,6 @@
     "password": "كلمة المرور",
     "confirm_password": "تأكيد كلمة المرور",
     "full_name": "الاسم الكامل",
-    "first_name": "الاسم الأول",
     "last_name": "الاسم الأخير",
     "forgot_password": "نسيت كلمة المرور؟",
     "dont_have_account": "ليس لديك حساب؟",
@@ -60,30 +60,23 @@
     "create_card": "إنشاء بطاقة",
     "view_card": "عرض البطاقة",
     "edit_card": "تعديل البطاقة",
-    "delete_card": "حذف البطاقة",
     "share_card": "مشاركة البطاقة",
     "card_details": "تفاصيل البطاقة",
     "delete_card_confirm": "هل أنت متأكد من حذف هذه البطاقة؟",
     "delete_card_success": "تم حذف البطاقة بنجاح",
     "card_saved": "تم حفظ البطاقة بنجاح",
-    
-    "company_name": "اسم الشركة",
     "job_title": "المسمى الوظيفي",
     "phone": "الهاتف",
     "mobile": "الجوال",
-    "website": "الموقع الإلكتروني",
     "address": "العنوان",
     "notes": "ملاحظات",
     "category": "التصنيف",
-    "enter_company_name": "أدخل اسم الشركة",
     "enter_job_title": "أدخل المسمى الوظيفي",
     "enter_phone": "أدخل رقم الهاتف",
     "enter_mobile": "أدخل رقم الجوال",
-    "enter_website": "أدخل رابط الموقع",
     "enter_address": "أدخل العنوان",
     "enter_notes": "أدخل ملاحظات",
     "select_category": "اختر التصنيف",
-    
     "business": "أعمال",
     "personal": "شخصي",
     "work": "عمل",
@@ -189,6 +182,45 @@
     "easy_access": "وصول سهل",
     "easy_access_description": "الوصول السريع ومشاركة بطاقات أعمالك مع الآخرين في أي وقت وفي أي مكان",
     
-    "start": "ابدأ"
+    "start": "ابدأ",
+    
+    "confirm_add_new_card": "تأكيد إضافة بطاقة جديدة",
+    "edit_card_title": "تعديل البطاقة",
+    "first_name": "الاسم الأول",
+    "second_name": "الاسم الثاني",
+    "position": "المنصب",
+    "company_name": "اسم الشركة",
+    "phone_number": "رقم الهاتف",
+    "email_address": "البريد الإلكتروني",
+    "website": "الموقع الإلكتروني",
+    "location": "الموقع",
+    "enter_first_name": "أدخل الاسم الأول",
+    "enter_second_name": "أدخل الاسم الثاني",
+    "enter_position": "أدخل المنصب",
+    "enter_company_name": "أدخل اسم الشركة",
+    "enter_phone_number": "أدخل رقم الهاتف",
+    "enter_email_address": "أدخل البريد الإلكتروني",
+    "enter_website": "أدخل الموقع الإلكتروني",
+    "enter_location": "أدخل الموقع",
+    "customize_colors": "تخصيص الألوان",
+    "select_background_color": "حدد لون الخلفية",
+    "select_text_color": "حدد لون النص",
+    "add_new_card": "أضف بطاقة جديدة",
+    "capture_again": "التقط مرة أخرى",
+    "update_card": "تحديث البطاقة",
+    "save_card": "حفظ البطاقة",
+    "tap_to_scan_business_card": "اضغط لمسح بطاقة العمل",
+    "scanning": "جاري المسح...",
+    "image_captured_successfully": "تم التقاط الصورة بنجاح",
+    "failed_to_capture_image": "فشل في التقاط الصورة",
+    "failed_to_select_image": "فشل في اختيار الصورة",
+    "no_image_selected": "لم يتم اختيار صورة",
+    "navigate_to_text_fields": "انتقل لحقول النص",
+    "failed_to_save_card": "فشل في حفظ البطاقة",
+    "delete_card": "حذف البطاقة",
+    "confirm_delete_card": "هل أنت متأكد من حذف هذه البطاقة؟",
+    "cancel": "إلغاء",
+    "delete": "حذف",
+    "edit": "تعديل"
 }
 
