--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,6 @@
 {
+    "card_image_captured_success": "Image captured successfully",
+    "failed_to_capture_card_image": "Failed to capture image",
     "app_name": "Business Card Manager",
     "ok": "OK",
     "cancel": "Cancel",
@@ -21,7 +23,6 @@
     "password": "Password",
     "confirm_password": "Confirm Password",
     "full_name": "Full Name",
-    "first_name": "First Name",
     "last_name": "Last Name",
     "forgot_password": "Forgot Password?",
     "dont_have_account": "Don't have an account?",
@@ -66,8 +67,6 @@
     "delete_card_confirm": "Are you sure you want to delete this card?",
     "delete_card_success": "Card deleted successfully",
     "card_saved": "Card saved successfully",
-    
-    "company_name": "Company Name",
     "job_title": "Job Title",
     "phone": "Phone",
     "mobile": "Mobile",
@@ -75,7 +74,6 @@
     "address": "Address",
     "notes": "Notes",
     "category": "Category",
-    "enter_company_name": "Enter company name",
     "enter_job_title": "Enter job title",
     "enter_phone": "Enter phone number",
     "enter_mobile": "Enter mobile number",
@@ -189,6 +187,38 @@
     "easy_access": "Easy Access",
     "easy_access_description": "Quickly access and share your business cards with others anytime, anywhere",
     
-    "start": "Start"
+    "start": "Start",
+    
+    "confirm_add_new_card": "Confirm Add New Card",
+    "edit_card_title": "Edit Card",
+    "first_name": "First Name",
+    "second_name": "Second Name",
+    "position": "Position",
+    "company_name": "Company Name",
+    "phone_number": "Phone Number",
+    "email_address": "Email Address",
+    "location": "Location",
+    "enter_first_name": "Enter first name",
+    "enter_second_name": "Enter second name",
+    "enter_position": "Enter position",
+    "enter_company_name": "Enter company name",
+    "enter_phone_number": "Enter phone number",
+    "enter_email_address": "Enter email address",    "enter_location": "Enter location",
+    "customize_colors": "Customize Colors",
+    "select_background_color": "Select background color",
+    "select_text_color": "Select text color",
+    "add_new_card": "Add New Card",
+    "capture_again": "Capture Again",
+    "update_card": "Update Card",
+    "save_card": "Save Card",
+    "tap_to_scan_business_card": "Tap to scan business card",
+    "scanning": "Scanning...",
+    "image_captured_successfully": "Image captured successfully",
+    "failed_to_capture_image": "Failed to capture image",
+    "failed_to_select_image": "Failed to select image",
+    "no_image_selected": "No image selected",
+    "navigate_to_text_fields": "Navigate to text fields",
+    "failed_to_save_card": "Failed to save card",
+    "confirm_delete_card": "Are you sure you want to delete this card?"
 }
 
