work on scanner

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -203,8 +203,8 @@
     "enter_website": "أدخل الموقع الإلكتروني",
     "enter_location": "أدخل الموقع",
     "customize_colors": "تخصيص الألوان",
-    "select_background_color": "حدد لون الخلفية",
-    "select_text_color": "حدد لون النص",
+    "select_background_color": "لون الخلفية",
+    "select_text_color": "لون النص",
     "add_new_card": "أضف بطاقة جديدة",
     "capture_again": "التقط مرة أخرى",
     "update_card": "تحديث البطاقة",
