--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -205,8 +205,8 @@
     "enter_phone_number": "Enter phone number",
     "enter_email_address": "Enter email address",    "enter_location": "Enter location",
     "customize_colors": "Customize Colors",
-    "select_background_color": "Select background color",
-    "select_text_color": "Select text color",
+    "select_background_color": "Background color",
+    "select_text_color": "Text color",
     "add_new_card": "Add New Card",
     "capture_again": "Capture Again",
     "update_card": "Update Card",
